# Space-Ablaze

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  ShootingEnemy.hpp  build.bat  main.cpp
assets/: desktop.ini
assets/shaders/: barrel_distortion.fs  shader.fs
src/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Application.cpp  Application.hpp  Asteroid.cpp  Asteroid.hpp  AsteroidManager.cpp  AsteroidManager.hpp  Bullet.cpp  Bullet.hpp  BulletManager.cpp  BulletManager.hpp  Button.cpp  Button.hpp  Card.cpp  Card.hpp  ConfettiManager.cpp  ConfettiManager.hpp  ConfettiParticle.cpp  ConfettiParticle.hpp  DamageIndicator.cpp  DamageIndicator.hpp  DamageIndicatorManager.cpp  DamageIndicatorManager.hpp  DamageOverlay.cpp  DamageOverlay.hpp  Enemy.cpp  Enemy.hpp  EnemyManager.cpp  EnemyManager.hpp  Entity.hpp  ExplosionConfettiManager.cpp  ExplosionConfettiManager.hpp  ExplosionConfettiParticle.cpp  ExplosionConfettiParticle.hpp  Game.cpp  Game.hpp  GameOverOverlay.cpp  (+27 more)
